# youtube-analytics-project_mikhapol

./: pyproject.toml
helper/: youtube_api_manual.py
homework-1/: channel.json
homework-2/: main.py  vdud.json
homework-4/: info.py  play_list_videos.json  video.json
homework-5/: main.py  play_list.json
homework-6/: main.py
src/: channel.py  playlist.py  video.py
