[tool.poetry]
name = "youtube-analytics-project-mikhapol"
version = "0.1.0"
description = ""
authors = ["Mikhail Polyakov PyCharm <mikhapol@bk.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project_mikhapol"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.86.0"
isodate = "^0.6.1"
accessify = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
